tests/fixtures/errors/unit_dissect_value_noelse.z
# E0500: a generic unit's numeric-value dissection with no case for the
# concrete value and no else is a compile-time error at the instantiation that
# has no matching arm.
sized: unit as {
    cap: u32.generic
    only: function {} out StringView is {
        match cap case 0 then {
            return "empty"
        }
    }
}

b: (sized cap: 9)

main: function is {
    print "\{b.only}"
}
